--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
-    "com.macawls.oceanfsm": "https://github.com/Macawls/OceanFsm.git",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.macawls.oceanfsm": "https://github.com/kiraio-moe/OceanFSM.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "9.0.3",
     "com.unity.cinemachine": "2.10.0",
-    "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
-    "com.unity.logging": "1.2.1",
+    "com.unity.logging": "1.2.3",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.splines": "2.6.1",
     "com.unity.test-framework": "1.1.33",
